--- a/homepagestyle.css
+++ b/homepagestyle.css
@@ -172,6 +172,7 @@ body {
     #timetable {
         margin-top: 40px;
         text-align: center;
+        margin-bottom: 40px;
     }
 
     #imgTimetable {
